--- a/style.css
+++ b/style.css
@@ -7,8 +7,15 @@
 	margin: 0px;
 	padding: 0px;
 	text-align: center;
-}
 
+}
+body{
+	background: linear-gradient(rgba(255,255,255,.5), rgba(255,255,255,.5)), url("https://www.mentesliberadas.com/wp-content/uploads/2018/10/apuntes-bonitos-principal.jpg");
+	/*background-image: url("https://www.mentesliberadas.com/wp-content/uploads/2018/10/apuntes-bonitos-principal.jpg");*/
+	background-size: cover;
+	/*background-repeat: no-repeat;*/
+	max-width: 100vw;
+}
 .header{
 	font-family: 'Raleway', sans-serif;
 	font-size: 2.5em;
@@ -35,9 +42,30 @@
 	width: 25%;
 	height: 30px;
 	border: 3px solid #000;
+	margin-bottom: 1%;
 }
 
 
 .input_anadir:focus{
 	border: 3px solid #012BFF;
+}
+
+.button_eliminar{
+	border: none; padding: 5px 10px; text-align: center; text-decoration: none; display: inline-block; font-size: 16px; background-color: #f44336; color: white; margin-top: 5px; margin-right: 8px; margin-left: 3vw;"
+}
+
+
+.button_eliminar:active{
+	background-color: #555555;
+}
+
+#items{
+	width: 100%;
+}
+
+#box {
+	width: 90%;
+	display: flex;
+	flex-direction: column;
+
 }
